--- a/Nbaplayer_espn.ipynb
+++ b/Nbaplayer_espn.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels=['player name', 'team', 'birth date', 'city', 'weight', 'height', 'salary']  "
+    "labels=['player name', 'team', 'birth date', 'city', 'weight', 'age', 'salary']  "
    ]
   },
   {
